--- a/store/templates/store/detail_customer.html
+++ b/store/templates/store/detail_customer.html
@@ -20,7 +20,7 @@
 <br>
 <h2>Customer:</h2>
 <h3>{{ cus.cname }} - {{ cus.caddr }}</h3>
-<body>
+<body>Phone No.
 <ul>
     {% for ph in cus.phonecus_set.all %}
         <li>
