--- a/store/templates/store/login.html
+++ b/store/templates/store/login.html
@@ -1,11 +1,77 @@
-
-
+{% load staticfiles %}
+<link rel="stylesheet" href="{% static 'store/css/bootstrap.min.css' %}">
+<link rel="stylesheet" href="{% static 'store/css/bootstrap-select.css' %}">
+<link href="{% static 'store/css/style.css' %}" rel="stylesheet" type="text/css" media="all" />
+<link rel="stylesheet" href="{% static 'store/css/flexslider.css' %}" type="text/css" media="screen" />
+<link rel="stylesheet" href="{% static 'store/css/font-awesome.min.css' %}" />
+    <link href='//fonts.googleapis.com/css?family=Ubuntu+Condensed' rel='stylesheet' type='text/css'>
+<link href='//fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic,700,700italic,800,800italic' rel='stylesheet' type='text/css'>
+<script type="text/javascript" src="{% static 'store/js/jquery.min.js' %}"></script>
+    <script src="{% static 'store/js/bootstrap.min.js' %}"></script>
+<script src="{% static 'store/js/bootstrap-select.js' %}"></script>
 {% block title %}Log In{% endblock %}
 {% block login_active %}active{% endblock %}
 
 {% block body %}
-<div class="container-fluid">
 
+    <style>
+
+form {
+    border: 3px solid #f1f1f1;
+}
+
+input[type=text], input[type=password]{
+    width: 200px;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+}
+button {
+    background-color: #4CAF50;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    cursor: pointer;
+    width: 100px;
+}
+
+
+
+.imgcontainer {
+    text-align: center;
+    margin: 24px 0 12px 0;
+}
+
+img.avatar {
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+}
+body {
+		background-image: url({% static 'store/images/6.jpg' %});
+    }
+
+</style>
+
+
+
+
+<div style="color: red; font-size: 50px">
+<b>Wholesale Management System</b>
+</div>
+<div class="imgcontainer"><h1>Admin login</h1></div>
+
+
+  <div class="imgcontainer">
+    <img src="{% static 'store/images/wms.JPG' %}" alt="avatar" class="avatar" >
+  </div>
+
+  <div class="container">
+<div class="container-fluid">
+<div class="imgcontainer">
     <div class="row">
         <div class="col-sm-12 col-md-6">
             <div class="panel panel-default">
@@ -42,10 +108,10 @@
                 <div class="panel-footer">
                 </div>
             </div>
-        </div>
     </div>
-
+    </div>
+</div>
+</div>
 </div>
 
 {% endblock %}
-
