--- a/store/templates/store/index.html
+++ b/store/templates/store/index.html
@@ -108,7 +108,7 @@
 					</div>
 
 					<div class="col-md-2 focus-grid">
-						<a href="categories.html#parentVerticalTab4">
+						<a href="{% url 'store:billing' %}">
 							<div class="focus-border">
 								<div class="focus-layout">
 									<div class="focus-image"><i class="fa fa-money"></i></div>
