--- a/store/templates/store/login.html
+++ b/store/templates/store/login.html
@@ -57,7 +57,7 @@ body {
 </style>
 
 
-
+<body>
 
 <div style="color: red; font-size: 50px">
 <b>Wholesale Management System</b>
@@ -68,12 +68,11 @@ body {
   <div class="imgcontainer">
     <img src="{% static 'store/images/wms.JPG' %}" alt="avatar" class="avatar" >
   </div>
-
+<div class="imgcontainer">
   <div class="container">
 <div class="container-fluid">
-<div class="imgcontainer">
     <div class="row">
-        <div class="col-sm-12 col-md-6">
+        <div >
             <div class="panel panel-default">
                 <div class="panel-body">
                     <h3>Log In</h3>
@@ -113,5 +112,5 @@ body {
 </div>
 </div>
 </div>
-
+</body>
 {% endblock %}
